--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "http://AliGhosn1.github.io/personal-website-v2"
+  "homepage": "https://www.alighosn.ca/"
 }
